test/sema/negated-int-literal-argument-overflow.delta
// RUN: %check_errors %not %delta -typecheck %s

void foo(uint a) { }

void main() {
    // CHECK: [[@LINE+1]]:9: error: -1 is out of range for type 'uint'
    foo(-1);
}
